# ord

./: .buildinfo  .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.json  genindex.html  index.html  intro.html  mirror_bridge.rs  objects.inv  search.html  searchindex.js
.github/workflows/: ci-docs.yml  ci-lint.yml  ci-test.yml  ci.yaml
brc20v2_rust/: Cargo.toml  README.md  config.json
brc20v2_rust/src/: brc20v2.rs  config.rs  cross_chain.rs  errors.rs  main.rs  zk_proof.rs
brc20v2_rust/src/relay/: ethereum.rs
contracts/: MirrorVerifier.sol
crates/blake3_stub/: Cargo.toml
crates/blake3_stub/src/: lib.rs
crates/brc20v2/: Cargo.toml
crates/brc20v2/src/: config.rs  cross_chain.rs  errors.rs  identity.rs  inscription.rs  lib.rs  merkle.rs  state.rs  types.rs  zk.rs  zk_proof.rs
crates/brc20v2/src/relay/: ethereum.rs  mod.rs  types.rs
crates/brc20v2_rust_poc/: Cargo.toml
crates/brc20v2_rust_poc/src/: bitcoin.rs  cross_chain.rs  inscription.rs  main.rs  merkle.rs  state.rs
crates/brc20v2_rust_poc/src/zk/: identity.rs  mod.rs  proof.rs
docs/: architecture.md  book.toml  brc20v2-schema.json  brc20v2.md  protocol.md
docs/src/: SUMMARY.md  guides.md  ord-2.0-operations-manual.md  ord-2.0-upgrade-guide.md
docs/src/guides/: mirror-explorer.md
examples/mirror-harness/: Cargo.toml  MirrorVerifier.sol  README.md
examples/mirror-harness/src/: main.rs
my_project/: Cargo.toml
my_project/src/: main.rs
ord2/: Cargo.toml  README.md
ord2-viewer/: .gitignore  index.html  package.json  vite.config.js
ord2-viewer/src/: App.jsx  EcoView.jsx  Viewer.jsx  index.css  styles.css
ord2/abi/: MirrorVerifier.abi.json
ord2/src/: lib.rs  living_inscription.rs  mirror_bridge.rs
poc/: README.md  brc20_poc.py
src/: brc20.rs  brc20v2.rs  config.rs  cross_chain.rs  ecosystem.rs  errors.rs  evolution.rs  fusion.rs  genetics.rs  identity.rs  index.rs  inscription.rs  lib.rs  living_inscription.rs  main.rs  mirror_bridge.rs  run.rs  zk.rs  zk_proof.rs
src/brc20v2/: brc20v2.rs  errors.rs  identity.rs  inscription.rs  mod.rs  zk.rs  zk_proof.rs
src/brc20v2/relay/: ethereum.rs
src/inscriptions/: inscription.rs
src/relay/: ethereum.rs
src/subcommand/: server.rs
tests/: MirrorVerifier.abi.json  ecosystem_test.rs  evolution_test.rs  fusion.rs  fusion_test.rs  living_inscription.rs  mirror_bridge.rs  mirror_test.rs
