[package]
name = "ord"
description = "◉ Ordinal wallet and block explorer"
version = "0.23.3"
autotests = false
autobins = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[workspace]
members = [".", "crates/*", "ord2"]
exclude = ["examples/mirror-harness"]

[workspace.package]
authors = ["The Ord Maintainers"]
edition = "2024"
homepage = "https://github.com/ordinals/ord"
license = "CC0-1.0"
repository = "https://github.com/ordinals/ord"
rust-version = "1.89.0"

[workspace.dependencies]
base64 = "0.22.0"
bitcoin = { version = "0.32.5", features = ["rand"] }
colored = "3"
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
hex = "0.4.3"
pretty_assertions = "1.2.1"
regex = "1.6.0"
reqwest = { version = "0.12.0", features = ["blocking", "json", "brotli"] }
secp256k1 = { version = "0.29.1", features = ["global-context"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_with = "3.7.0"
tempfile = "3.2.0"

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
axum = { version = "0.8.1", features = ["http2"] }
axum-server = "0.7.1"
bip322 = "0.0.10"
bip39 = "2.0.0"
bitcoin.workspace = true
bitcoincore-rpc = "0.19.0"
boilerplate = { version = "1.0.0", features = ["axum"] }
blake3 = "1.5.5"
brotli = "8.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
# ... (rest unchanged)
