[package]
name = "ord2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
once_cell = "1.19"
rand = { version = "0.8", features = ["std"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
