[package]
name = "ord2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
ethers = { version = "2", features = ["abigen", "rustls"] }

k256 = { version = "0.13", features = ["ecdsa"] }

[dev-dependencies]
ethers = { version = "2", features = ["abigen", "rustls"] }
