```toml
[package]
name = "ord2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
once_cell = "1.19"
rand = { version = "0.8", features = ["std"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
ethers = { version = "2", features = ["abigen", "rustls"] }
k256 = { version = "0.13", features = ["ecdsa"] }

[dev-dependencies]
tempfile = "3"
ethers = { version = "2", features = ["abigen", "rustls"] }
```
