[package]
name = "brc20v2"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/brc20v2"
description = "BRC-20 v2 cross-chain relay utilities"
homepage = "https://your-org.github.io/brc20v2"
authors = ["Your Name <you@example.com>"]
rust-version = "1.70"

[dependencies]
# Core
anyhow = "1.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
chrono = { version = "0.4.19", features = ["serde"] }

# Ethereum / Web3
web3 = { version = "0.20", features = ["http", "signing", "rustls"] }

# Async runtime
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }

# Optional: logging (if using tracing spans)
tracing = "0.1"
