[package]
name = "brc20v2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
reqwest.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
sha3 = "0.10.8"
edition = "2024"
license = "MIT"
repository = "https://github.com/Pray4Love1/brc20v2"
description = "BRC-20 v2 protocol with cross-chain relay and zk-proof state machine"
homepage = "https://your-org.github.io/brc20v2"
authors = ["Jon S. <totalwine2337@gmail.com.com>"]
rust-version = "1.70"

[dependencies]
# Core utilities
anyhow = "1.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "2.0.11"

# Ethereum/Web3 client
web3 = { version = "0.20", features = ["http", "signing", "rustls"] }

# Async runtime
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }

# Optional: structured logging
tracing = "0.1"
