[package]
name = "mirror-harness"
version = "0.1.0"
edition = "2021"
authors = ["The Ord Maintainers"]

[dependencies]
blake3 = "1.5.5"
ethers = { version = "2.0.14", features = ["abigen", "contract", "providers", "signers"] }
ethers-solc = { version = "2.0.14", default-features = false, features = ["svm"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }

[workspace]
